--- a/design/style.css
+++ b/design/style.css
@@ -32,7 +32,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 /* header 부분 */
@@ -72,6 +72,7 @@ body {
 .document {
   height: 100%;
   background-color: var(--document-bg-color);
+  overflow: scroll;
 
   /* Firefox */
   scrollbar-width: 6px;
