--- a/design/style.css
+++ b/design/style.css
@@ -26,6 +26,27 @@ body {
   overflow: hidden;
 }
 
+p {
+  color: var(--smokywhite);
+}
+
+label {
+  color: var(--text-accent-color);
+}
+
+dialog {
+  border: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+* {
+  outline: 0;
+  box-sizing: border-box;
+}
+
 .App {
   width: 100%;
   max-width: 1000px;
@@ -94,4 +115,29 @@ body {
   color: white;
   border-top: 1px solid var(--border-color);
   text-align: center;
+}
+
+.dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--document-bg-color);
+}
+
+.dialog_container {
+  display: flex;
+  flex-direction: column;
+  padding: 0.4em;
+  width: 32em;
+  background-color: var(--bg-accent-color);
+  background-color: var(--component-bg-gradient);
+  border: 1px solid var(--border-color);
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 20px var(--shadow-color);
 }
